end_of_second_day

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost/ScramManager?serverTimezone=Europe/Warsaw&createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost/Scram_Manager?serverTimezone=Europe/Warsaw&createDatabaseIfNotExist=true
+spring.datasource.username=artur
+spring.datasource.password=artur1
 spring.jpa.hibernate.ddl-auto=update
